fix: Add whitespace to each line in the about section

--- a/style.css
+++ b/style.css
@@ -121,6 +121,7 @@ html {
     font-size: 17px;
     color: #555555;
     margin: 0px;
+    margin-bottom: 3px;
 }
 
 #p-interested {
